--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="title_text_size">27sp</dimen>
+    <dimen name="sub_title_content">22sp</dimen>
+    <dimen name="content">18sp</dimen>
 </resources>
