--- a/app/src/main/res/layout/fragment_user_dashboard.xml
+++ b/app/src/main/res/layout/fragment_user_dashboard.xml
@@ -5,83 +5,169 @@
     android:layout_height="match_parent"
     tools:context="com.polizi.iam.polizi.user.fragments.UserDashboard">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/cardview_default_radius"
-            app:cardElevation="@dimen/cardview_default_elevation"
-            app:cardUseCompatPadding="true">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/fab_margin">
+                android:windowSoftInputMode="stateAlwaysHidden"
+                app:cardCornerRadius="@dimen/cardview_default_radius"
 
-                <TextView
+                app:cardElevation="@dimen/cardview_default_elevation"
+                app:cardUseCompatPadding="true">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/name"
-                    android:textSize="@dimen/sub_title_content"
-                    android:textStyle="bold" />
+                    android:orientation="vertical"
+                    android:padding="@dimen/fab_margin">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:layout_margin="@dimen/fab_margin"
-                    android:background="@android:color/darker_gray" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="@string/name"
+                        android:textSize="@dimen/sub_title_content"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/dash_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/content" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+                    <View
+                        android:id="@+id/divider0"
+                        android:layout_width="0.5dp"
+                        android:layout_height="0.5dp"
+                        android:layout_centerInParent="true"
+                        android:layout_margin="@dimen/fab_margin" />
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/cardview_default_radius"
-            app:cardElevation="@dimen/cardview_default_elevation"
-            app:cardUseCompatPadding="true">
+                    <TextView
+                        android:id="@+id/dash_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/divider0"
+                        android:textSize="@dimen/sub_title_content" />
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/fab_margin">
+                android:windowSoftInputMode="stateAlwaysHidden"
+                app:cardCornerRadius="@dimen/cardview_default_radius"
 
-                <TextView
+                app:cardElevation="@dimen/cardview_default_elevation"
+                app:cardUseCompatPadding="true">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/designation"
-                    android:textSize="@dimen/sub_title_content"
-                    android:textStyle="bold" />
+                    android:orientation="vertical"
+                    android:padding="@dimen/fab_margin">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:layout_margin="@dimen/fab_margin"
-                    android:background="@android:color/darker_gray" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="@string/designation"
+                        android:textSize="@dimen/sub_title_content"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/dash_designation"
+                    <View
+                        android:id="@+id/divider1"
+                        android:layout_width="0.5dp"
+                        android:layout_height="0.5dp"
+                        android:layout_centerInParent="true"
+                        android:layout_margin="@dimen/fab_margin" />
+
+                    <TextView
+                        android:id="@+id/dash_designation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/divider1"
+                        android:textSize="@dimen/sub_title_content" />
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/cardview_default_radius"
+
+                app:cardElevation="@dimen/cardview_default_elevation"
+                app:cardUseCompatPadding="true">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/content" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+                    android:orientation="vertical"
+                    android:padding="@dimen/fab_margin">
 
-        <Button
-            android:id="@+id/call_backup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/call_backup" />
-    </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="@string/backup_count"
+                        android:textSize="@dimen/sub_title_content"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:id="@+id/divider2"
+                        android:layout_width="0.5dp"
+                        android:layout_height="0.5dp"
+                        android:layout_centerInParent="true"
+                        android:layout_margin="@dimen/fab_margin" />
+
+                    <EditText
+                        android:id="@+id/backup_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_toRightOf="@id/divider2"
+                        android:inputType="number"
+                        android:textSize="@dimen/sub_title_content"
+                        android:windowSoftInputMode="stateVisible|adjustResize" />
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/cardview_default_radius"
+                app:cardElevation="@dimen/cardview_default_elevation"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="@dimen/fab_margin">
+
+                    <TextView
+                        android:id="@+id/user_mes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="@string/backup_message"
+                        android:textSize="@dimen/sub_title_content"
+                        android:textStyle="bold" />
+                    <EditText
+                        android:id="@+id/backup_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/sub_title_content"
+                        android:windowSoftInputMode="stateAlwaysVisible|adjustResize" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <Button
+                android:id="@+id/call_backup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/call_backup" />
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
