Module Milestone 1 Clean Working Gradle Repaired API Index removed from Main Activity IP Address changed

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,5 +8,6 @@
         app:showAsAction="always" />
     <item android:id="@+id/settings_menu"
         android:title="@string/action_settings"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        android:visible="false"/>
 </menu>
