--- a/app/src/main/res/layout/fragment_user_dashboard.xml
+++ b/app/src/main/res/layout/fragment_user_dashboard.xml
@@ -14,154 +14,120 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/general_padding"
+                android:text="@string/name"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/dash_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/general_padding"
+                android:textSize="@dimen/sub_title_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/general_padding"
+                android:text="@string/designation"
+                android:textColor="@android:color/black"/>
+
+            <TextView
+                android:id="@+id/dash_designation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/general_padding"
+                android:textSize="@dimen/sub_title_content" />
+
+            <!--
+                        <android.support.v7.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:cardCornerRadius="@dimen/cardview_default_radius"
+
+                            app:cardElevation="@dimen/cardview_default_elevation"
+                            app:cardUseCompatPadding="true">
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:padding="@dimen/fab_margin">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:text="@string/backup_count"
+                                    android:textSize="@dimen/sub_title_content"
+                                    android:textStyle="bold" />
+
+                                <View
+                                    android:id="@+id/divider2"
+                                    android:layout_width="0.5dp"
+                                    android:layout_height="0.5dp"
+                                    android:layout_centerInParent="true"
+                                    android:layout_margin="@dimen/fab_margin" />
+
+                                <EditText
+                                    android:id="@+id/backup_count"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_toRightOf="@id/divider2"
+                                    android:inputType="number"
+                                    android:textSize="@dimen/sub_title_content"
+                                    android:windowSoftInputMode="stateVisible|adjustResize" />
+                            </RelativeLayout>
+                        </android.support.v7.widget.CardView>-->
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:windowSoftInputMode="stateAlwaysHidden"
-                app:cardCornerRadius="@dimen/cardview_default_radius"
+                android:padding="@dimen/general_padding"
+                android:text="Contact No"
+                android:textColor="@android:color/black" />
 
-                app:cardElevation="@dimen/cardview_default_elevation"
-                app:cardUseCompatPadding="true">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/fab_margin">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="@string/name"
-                        android:textSize="@dimen/sub_title_content"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:id="@+id/divider0"
-                        android:layout_width="0.5dp"
-                        android:layout_height="0.5dp"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="@dimen/fab_margin" />
-
-                    <TextView
-                        android:id="@+id/dash_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@id/divider0"
-                        android:textSize="@dimen/sub_title_content" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
+            <TextView
+                android:id="@+id/contact_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:windowSoftInputMode="stateAlwaysHidden"
-                app:cardCornerRadius="@dimen/cardview_default_radius"
+                android:padding="@dimen/general_padding"
+                android:textSize="@dimen/sub_title_content" />
 
-                app:cardElevation="@dimen/cardview_default_elevation"
-                app:cardUseCompatPadding="true">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/fab_margin">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="@string/designation"
-                        android:textSize="@dimen/sub_title_content"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:id="@+id/divider1"
-                        android:layout_width="0.5dp"
-                        android:layout_height="0.5dp"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="@dimen/fab_margin" />
-
-                    <TextView
-                        android:id="@+id/dash_designation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@id/divider1"
-                        android:textSize="@dimen/sub_title_content" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-<!--
-            <android.support.v7.widget.CardView
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/cardview_default_radius"
+                android:text="Address"
+                android:textColor="@android:color/black"
+                android:padding="@dimen/general_padding"
+                android:textSize="@dimen/sub_title_content" />
 
-                app:cardElevation="@dimen/cardview_default_elevation"
-                app:cardUseCompatPadding="true">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/fab_margin">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="@string/backup_count"
-                        android:textSize="@dimen/sub_title_content"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:id="@+id/divider2"
-                        android:layout_width="0.5dp"
-                        android:layout_height="0.5dp"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="@dimen/fab_margin" />
-
-                    <EditText
-                        android:id="@+id/backup_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_toRightOf="@id/divider2"
-                        android:inputType="number"
-                        android:textSize="@dimen/sub_title_content"
-                        android:windowSoftInputMode="stateVisible|adjustResize" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>-->
-
-            <android.support.v7.widget.CardView
+            <TextView
+                android:id="@+id/address_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/cardview_default_radius"
-                app:cardElevation="@dimen/cardview_default_elevation"
-                app:cardUseCompatPadding="true">
+                android:padding="@dimen/general_padding"
+                android:textSize="@dimen/sub_title_content" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/fab_margin">
+            <TextView
+                android:id="@+id/user_mes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/general_padding"
+                android:text="@string/backup_message"
+                android:textColor="@android:color/black" />
 
-                    <TextView
-                        android:id="@+id/user_mes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="@string/backup_message"
-                        android:textSize="@dimen/sub_title_content"
-                        android:textStyle="bold" />
-                    <EditText
-                        android:id="@+id/backup_message"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/sub_title_content"
-                        android:windowSoftInputMode="stateAlwaysVisible|adjustResize" />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/backup_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/template_msg"
+                android:padding="@dimen/general_padding"
+                android:textSize="@dimen/sub_title_content" />
 
             <Button
                 android:id="@+id/call_backup"
