--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="title_text_size">27sp</dimen>
-    <dimen name="sub_title_content">22sp</dimen>
+    <dimen name="sub_title_content">18sp</dimen>
     <dimen name="content">18sp</dimen>
+    <dimen name="general_padding">5dp</dimen>
 </resources>
